More fixes for the alerts not being centered correctly, and spacing for the enroll now button in the course page

--- a/public/css/course.css
+++ b/public/css/course.css
@@ -248,7 +248,7 @@ body {
 
 .container {
     display: flex;
-    padding: 2em;
+    padding: 0 0 2em 0;
     justify-content: center;
     align-items: center;
 }
@@ -578,7 +578,7 @@ body {
     }
     .container h2 {
         text-align: center;
-        padding: 0 1rem;
+        padding: 1rem 1rem 2rem 1rem;
         font-size: 30px;
     }
     /*-----Connected-------*/
